--- a/test.html
+++ b/test.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <link rel="stylesheet" href="css/style.css">
-<style>
-div.sticky {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  padding: 5px;
-  background-color: #cae8ca;
-  border: 2px solid #4CAF50;
-}
-</style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
+
 <body>
-
-<p>Try to <b>scroll</b> inside this frame to understand how sticky positioning works.</p>
-
-    <div class="main-menu">I am sticky!</div>
-
-
-
-<div style="padding-bottom:2000px">
-  <p>In this example, the sticky element sticks to the top of the page (top: 0), when you reach its scroll position.</p>
-  <p>Scroll back up to remove the stickyness.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-</div>
-
+  <div class="row">
+    <div class="col-sm">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, odit? Exercitationem neque voluptate repudiandae
+        nesciunt iste, voluptatibus sint quas voluptatem velit laboriosam veniam pariatur libero ipsum ab qui, beatae
+        iusto!</p>
+    </div>
+    <div class="col-sm">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, odit? Exercitationem neque voluptate repudiandae
+        nesciunt iste, voluptatibus sint quas voluptatem velit laboriosam veniam pariatur libero ipsum ab qui, beatae
+        iusto!</p>
+    </div>
+    <div class="col-sm">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, odit? Exercitationem neque voluptate repudiandae
+        nesciunt iste, voluptatibus sint quas voluptatem velit laboriosam veniam pariatur libero ipsum ab qui, beatae
+        iusto!</p>
+    </div>
+    <div class="col-sm">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, odit? Exercitationem neque voluptate repudiandae
+        nesciunt iste, voluptatibus sint quas voluptatem velit laboriosam veniam pariatur libero ipsum ab qui, beatae
+        iusto!</p>
+    </div>
+  </div>
 </body>
+
 </html>
