blog side added

--- a/index.html
+++ b/index.html
@@ -762,41 +762,131 @@
                                 </div>
                             </div>
                         </div>
+                        <hr class="mt-6 mb-6">
                         <div class="row pt-3 pb-3">
-                            <div class="col-lg-12">
-                                <div class="card-group">
-                                    <div class="card">
-                                        <div class="row">
-                                            <div class="col-lg-5">
-                                                <img src="img/post-img-001-768x800.jpg" class="card-img-top" alt="...">
-                                            </div>
-                                            <div class="col-lg-7">
-                                                <div class="card-body">
-                                                    <h5 class="card-title"><a href="#">How much aspirin to take for
-                                                            stroke</a></h5>
-                                                    <span class="card-text"><i class="fa fa-comment"
-                                                            aria-hidden="true"></i> 3 Comments </span>
-                                                    <span class="card-text"><i class="fa fa-user"
-                                                            aria-hidden="true"></i> Alex </span>
-                                                    <hr>
-                                                    <p class="card-text">Lorem Ipsum is simply dummy text of the
-                                                        printing and typesetting industry. Lorem Ipsum has been the
-                                                        industry's...</p>
-                                                </div>
+                            <div class="col-lg-6">
+                                <div class="card">
+                                    <div class="row">
+                                        <div class="col-lg-5">
+                                            <img width="768" height="800" src="img/post-img-001-768x800.jpg"
+                                                class="card-img-top" alt="...">
+                                            <div class="post-date text-center">
+                                                <h2 class="mb-0">15</h2>
+                                                <span>Nov 2020</span>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="card">
-
+                                        <div class="col-lg-7">
+                                            <div class="card-body">
+                                                <h5 class="card-title"><a href="#">How much aspirin to take for
+                                                        stroke</a></h5>
+                                                <span class="card-text"><i class="fa fa-comment" aria-hidden="true"></i>
+                                                    <a href="#">3 Comments</a></span>
+                                                <span class="card-text"><i class="fa fa-user" aria-hidden="true"></i> <a
+                                                        href="#">Alex</a> </span>
+                                                <hr>
+                                                <p class="card-text">Lorem Ipsum is simply dummy text of the
+                                                    printing and typesetting industry. Lorem Ipsum has been the
+                                                    industry's...</p>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-6">
-
+                                <div class="card">
+                                    <div class="row">
+                                        <div class="col-lg-5">
+                                            <img width="768" height="800" src="img/post-img-002-768x800.jpg"
+                                                class="card-img-top" alt="...">
+                                            <div class="post-date text-center">
+                                                <h2 class="mb-0">12</h2>
+                                                <span>Nov 2020</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-7">
+                                            <div class="card-body">
+                                                <h5 class="card-title"><a href="#">Implant Surgical equipment
+                                                        technology</a></h5>
+                                                <span class="card-text"><i class="fa fa-comment" aria-hidden="true"></i>
+                                                    <a href="#">3
+                                                        Comments</a></span>
+                                                <span class="card-text"><i class="fa fa-user" aria-hidden="true"></i> <a
+                                                        href="#">Alex</a> </span>
+                                                <hr>
+                                                <p class="card-text">Lorem Ipsum is simply dummy text of the
+                                                    printing and typesetting industry. Lorem Ipsum has been the
+                                                    industry's...</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row pt-3 pb-3">
+                            <div class="col-lg-6">
+                                <div class="card">
+                                    <div class="row">
+                                        <div class="col-lg-5">
+                                            <img width="768" height="800" src="img/post-img-003-768x800.jpg"
+                                                class="card-img-top" alt="...">
+                                            <div class="post-date text-center">
+                                                <h2 class="mb-0">10</h2>
+                                                <span>Nov 2020</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-7">
+                                            <div class="card-body">
+                                                <h5 class="card-title"><a href="#">The Benefits of Middle-Age
+                                                        Fitness</a></h5>
+                                                <span class="card-text"><i class="fa fa-comment" aria-hidden="true"></i>
+                                                    <a href="#">3 Comments</a></span>
+                                                <span class="card-text"><i class="fa fa-user" aria-hidden="true"></i> <a
+                                                        href="#">Alex</a>
+                                                </span>
+                                                <hr>
+                                                <p class="card-text">Lorem Ipsum is simply dummy text of the
+                                                    printing and typesetting industry. Lorem Ipsum has been the
+                                                    industry's...</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="card">
+                                    <div class="row">
+                                        <div class="col-lg-5">
+                                            <img width="768" height="800" src="img/single-img-nine-768x800.jpg"
+                                                class="card-img-top" alt="...">
+                                            <div class="post-date text-center">
+                                                <h2 class="mb-0">05</h2>
+                                                <span>Nov 2020</span>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-7">
+                                            <div class="card-body">
+                                                <h5 class="card-title"><a href="#">Good Reasons to Break the Fast-Food
+                                                        Habit</a></h5>
+                                                <span class="card-text"><i class="fa fa-comment" aria-hidden="true"></i>
+                                                    <a href="#">3
+                                                        Comments</a></span>
+                                                <span class="card-text"><i class="fa fa-user" aria-hidden="true"></i> <a
+                                                        href="#">Alex</a>
+                                                </span>
+                                                <hr>
+                                                <p class="card-text">Lorem Ipsum is simply dummy text of the
+                                                    printing and typesetting industry. Lorem Ipsum has been the
+                                                    industry's...</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            </div>
             </div>
 
         </main>
