add a contact icon

--- a/index.html
+++ b/index.html
@@ -888,10 +888,26 @@
             </div>
             </div>
             </div>
-
         </main>
-        <footer style="height: 2000px;">
-
+        <footer>
+            <div class="row contact-details">
+                <div class="col-12">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="d-table">
+                                    <div class="table-cell">
+                                        <span class="p-3">
+                                            <i class="fa fa-phone" aria-hidden="true"
+                                                style="transform: rotate(90deg);"></i>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </footer>
     </section>
     <!--Javascript-->
