footer contact details add

--- a/index.html
+++ b/index.html
@@ -897,10 +897,40 @@
                             <div class="col-lg-4">
                                 <div class="d-table">
                                     <div class="table-cell">
-                                        <span class="p-3">
+                                        <span class="icon">
                                             <i class="fa fa-phone" aria-hidden="true"
                                                 style="transform: rotate(90deg);"></i>
                                         </span>
+                                    </div>
+                                    <div class="table-cell">
+                                        <h4>+123 4546 789/11</h4>
+                                        <small>Have a question? call us now</small>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="d-table">
+                                    <div class="table-cell">
+                                        <span class="icon">
+                                            <i class="far fa-envelope" aria-hidden="true"></i>
+                                        </span>
+                                    </div>
+                                    <div class="table-cell">
+                                        <h4>info@domainname.com</h4>
+                                        <small>Need support? Drop us an email</small>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="d-table">
+                                    <div class="table-cell">
+                                        <span class="icon">
+                                            <i class="far fa-clock" aria-hidden="true"></i>
+                                        </span>
+                                    </div>
+                                    <div class="table-cell">
+                                        <h4>Mon – Sat 07:00 – 21:00</h4>
+                                        <small>Mon – Sat 07:00 – 21:00</small>
                                     </div>
                                 </div>
                             </div>
