footer widget add

--- a/index.html
+++ b/index.html
@@ -938,6 +938,83 @@
                     </div>
                 </div>
             </div>
+            <div class="row footer">
+                <div class="col-12">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-lg-3">
+                                <h3>About Brivona</h3>
+                                <p>Our Clinic has grown to provide a world class facility for the clinic advanced
+                                    restorative dentistry.
+                                </p>
+                                <p>We are among the most qualified implant providers in the AUS with over 30 years of
+                                    quality training and experience.
+                                </p>
+                                <div class="footer-social-link">
+                                    <a href="#"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
+                                    <a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a>
+                                    <a href="#"><i class="fab fa-pinterest-p" aria-hidden="true"></i></a>
+                                    <a href="#"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                            <div class="col-lg-3">
+                                <h3>Quick Links</h3>
+                                <ul class="quick-links">
+                                    <li><a href="#">Make Appointments</a></li>
+                                    <li><a href="#">Before & After</a></li>
+                                    <li><a href="#">Customer Treatments</a></li>
+                                    <li><a href="#">Our Doctors Team</a></li>
+                                    <li><a href="#">Departments Services</a></li>
+                                    <li><a href="#">About our Clinic</a></li>
+                                    <li><a href="#">Contact Us</a></li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-3 pl-0">
+                                <h3>Latest News</h3>
+                                <ul class="latest-news">
+                                    <li>
+                                        <img src="img/post-img-001-768x800.jpg" alt="" srcset="">
+                                        <span>November 12, 2020</span>
+                                        <a href="#">How much aspirin to take for stroke</a>
+                                    </li>
+                                    <li>
+                                        <img src="img/post-img-002-768x800.jpg" alt="" srcset="">
+                                        <span>November 12, 2020</span>
+                                        <a href="#">How much aspirin to take for stroke</a>
+                                    </li>
+                                    <li>
+                                        <img src="img/post-img-003-768x800.jpg" alt="" srcset="">
+                                        <span>November 12, 2020</span>
+                                        <a href="#">How much aspirin to take for stroke</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-3">
+                                <h3>Our Services</h3>
+                                <div class="d-table our-services-footer">
+                                    <div class="table-cell">
+                                        <ul>
+                                            <li><a href="#">Surgery</a></li>
+                                            <li><a href="#">Cardiology</a></li>
+                                            <li><a href="#">Pediatric</a></li>
+                                            <li><a href="#">Anesthesiology</a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="table-cell pl-3">
+                                        <ul>
+                                            <li><a href="#">Psychological</a></li>
+                                            <li><a href="#">Orthopedics</a></li>
+                                            <li><a href="#">Oncology</a></li>
+                                            <li><a href="#">Dermatology</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </footer>
     </section>
     <!--Javascript-->
