Unused function removed

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <section class="container-fluid">
         <main>
             <!--top button-->
-            <div class="top-button" id="go-to-top" onclick="topFunction()">
+            <div class="top-button" id="go-to-top">
                 <i class="fa fa-arrow-up" aria-hidden="true"></i>
             </div>
             <!--Information widget-->
