--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <!--Top Header-->
-    <section class="container-fluid d-none d-lg-block">
+    <section class="container-fluid">
         <header>
             <section class="top-nav sm-none">
                 <section class="container">
@@ -63,7 +63,7 @@
             <div class="container">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
                     aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <a class="" href="#"><img src="img/logo.png" alt="logo" class="navbar-brand"></a>
 
@@ -100,7 +100,7 @@
                 <i class="fa fa-arrow-up" aria-hidden="true"></i>
             </div>
             <!--Information widget-->
-            <div class="widget d-none d-lg-block">
+            <div class="widget">
                 <div class="row bg-light">
                     <div class="col-lg-12">
                         <div class="container">
